ensure member variables are always synchronized
git-svn-id: https://svn.eu.apache.org/repos/asf/activemq/trunk@551271 13f79535-47bb-0310-9956-ffa450edef68